# da-cubec

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.run/: clean.run.xml  docs.run.xml  make.run.xml  tidy.run.xml
include/: blocks.h  callbacks.h  camera.h  chunk.h  chunk_store.h  game_config.h  game_context.h  game_state.h  gl_glfw_include.h  input_process.h  io_utils.h  main.h  material.h  mesh.h  opengl_glfw.h  player.h  pointer.h  shader.h  shader_utils.h  text_renderer.h  world.h
include/hud/: debug_ui.h
include/meshes/: cube.h
include/utils/: io_utils.h  shader_utils.h
include/world/: block_actions.h  blocks.h  chunk.h  chunk_store.h  fog.h  pointer.h  world.h
src/: callbacks.c  camera.c  chunk.c  chunk_store.c  game_config.c  game_context.c  input_process.c  main.c  material.c  mesh.c  player.c  pointer.c  shader.c  text_renderer.c  world.c
src/hud/: debug_ui.c
src/meshes/: cube.c
src/shaders/: basic.frag.glsl  basic.vert.glsl  cube.frag.glsl  cube.vert.glsl  text.frag.glsl  text.vert.glsl
src/utils/: io_utils.c  shader_utils.c
src/world/: block_actions.c  blocks.c  chunk.c  chunk_store.c  fog.c  pointer.c  world.c
